# cpptrader-rs

./: Cargo.toml  CppTrader-Architecture-Analysis.md  CppTrader-Rust-Port-Plan.md  README-CN.md  README.md  Rust-Design-Comparison.md
benches/: matching.rs
examples/: market_manager.rs  matching_engine.rs
src/: lib.rs
src/matching/: error.rs  level.rs  market_handler.rs  market_manager.rs  mod.rs  order.rs  order_book.rs  symbol.rs  types.rs
tests/: matching_engine_tests.rs
